<resources>
    <string name="app_name">Sony RX100M3 Remote Control</string>
    <string name="lensZoomW">W</string>
    <string name="lensZoomT">T</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="action_settings">Camera Settings</string>

    <!-- Settings related to Shoot mode parameter -->
    <string name="pref_title_shoot_mode">Shoot Mode</string>
    <string name="pref_default_shoot_mode">movie</string>
    <string name="pref_dialog_shoot_mode">Select your shot mode</string>
    <string-array name="pref_shoot_mode_titles">
        <item>Still image shoot mode</item>
        <item>Movie shoot mode</item>
        <item>Audio shoot mode</item>
        <item>Interval still shoot mode</item>
        <item>Loop recording shoot mode</item>
    </string-array>
    <string-array name="pref_shoot_mode_values">
        <item>still</item>
        <item>movie</item>
        <item>audio</item>
        <item>intervalstill</item>
        <item>looprec</item>
    </string-array>

    <!-- Settings related to Zoom setting parameter -->
    <string name="pref_title_zoom_settings">Zoom setting</string>
    <string name="pref_default_zoom_settings">On:Clear Image Zoom</string>
    <string name="pref_dialog_zoom_settings">Sets whether to use the Clear Image Zoom and Digital
Zoom when zooming</string>
    <string-array name="pref_zoom_settings_titles">
        <item>Optical zoom only</item>
        <item>Smart zoom only</item>
        <item>On: Clear Image Zoom</item>
        <item>On: Digital Zoom</item>
        <item>Off: Digital Zoom</item>
    </string-array>
    <string-array name="pref_zoom_settings_values">
        <item>Optical Zoom Only</item>
        <item>Smart Zoom Only</item>
        <item>On:Clear Image Zoom</item>
        <item>On:Digital Zoom</item>
        <item>Off:Digital Zoom</item>
    </string-array>


    <!-- Settings related to Continuous shooting speed parameter -->
    <string name="pref_title_continuous_shooting_speed">Continuous shooting speed</string>
    <string name="pref_default_continuous_shooting_speed">5fps 2sec</string>
    <string name="pref_dialog_continuous_shooting_speed">Select your speed</string>
    <string-array name="pref_continuous_shooting_speed_titles">
        <item>Hi</item>
        <item>Low</item>
        <item>10 frames in 1 second</item>
        <item>10 frames in 1.25 seconds</item>
        <item>10 frames in 2 seconds</item>
        <item>10 frames in 5 seconds</item>
    </string-array>
    <string-array name="pref_continuous_shooting_speed_values">
        <item>Hi</item>
        <item>Low</item>
        <item>10fps 1sec</item>
        <item>8fps 1sec</item>
        <item>5fps 2sec</item>
        <item>2fps 5sec</item>
    </string-array>


    <!-- Settings related to Continuous shooting mode parameter -->
    <string name="pref_title_continuous_shooting">Continuous shooting</string>
    <string name="pref_default_continuous_shooting">Single</string>
    <string name="pref_dialog_continuous_shooting">Select your shoot mode</string>
    <string-array name="pref_continuous_shooting_titles">
        <item>Single shooting</item>
        <item>Continuous shooting</item>
        <item>Speed priority continuous shooting</item>
        <item>Burst shooting</item>
        <item>Motion shot</item>
    </string-array>
    <string-array name="pref_continuous_shooting_values">
        <item>Single</item>
        <item>Continuous</item>
        <item>Spd Priority Cont.</item>
        <item>Burst</item>
        <item>MotionShot</item>
    </string-array>


    <!-- Settings related to Self-timer parameters -->
    <string name="pref_title_self_timer">Self-timer parameters</string>
    <string name="pref_default_self_timer">0</string>
    <string name="pref_dialog_self_timer">Select your shoot mode</string>
    <string-array name="pref_self_timer_titles">
        <item>Off</item>
        <item>2 Seconds</item>
        <item>10 Seconds</item>
    </string-array>
    <string-array name="pref_self_timer_values">
        <item>0</item>
        <item>2</item>
        <item>10</item>
    </string-array>


    <!-- Settings related to Exposure mode parameter -->
    <string name="pref_title_exposure_mode">Exposure Mode</string>
    <string name="pref_default_exposure_mode">Program Auto</string>
    <string name="pref_dialog_exposure_mode">Select your speed</string>
    <string-array name="pref_exposure_mode_titles">
        <item>Program Auto</item>
        <item>Aperture Priority</item>
        <item>Shutter Priority</item>
        <item>Manual Exposure</item>
        <item>Intelligent Auto</item>
        <item>Superior Auto</item>
    </string-array>
    <string-array name="pref_exposure_mode_values">
        <item>Program Auto</item>
        <item>Aperture</item>
        <item>Shutter</item>
        <item>Manual</item>
        <item>Intelligent Auto</item>
        <item>Superior Auto</item>
    </string-array>


    <!-- Settings related to Focus mode parameter -->
    <string name="pref_title_focus_mode">Focus Mode</string>
    <string name="pref_default_focus_mode">AF-S</string>
    <string name="pref_dialog_focus_mode">Select your shoot mode</string>
    <string-array name="pref_focus_mode_titles">
        <item>Single AF</item>
        <item>Continuous AF</item>
        <item>Direct Manual Focus</item>
        <item>Manual Focus</item>
    </string-array>
    <string-array name="pref_focus_mode_values">
        <item>AF-S</item>
        <item>AF-C</item>
        <item>DMF</item>
        <item>MF</item>
    </string-array>


    <!-- Settings related to Flash mode parameter -->
    <string name="pref_title_flash_mode">Flash mode parameter</string>
    <string name="pref_default_flash_mode">Program Auto</string>
    <string name="pref_dialog_flash_mode">Select your speed</string>
    <string-array name="pref_flash_mode_titles">
        <item>Off</item>
        <item>Auto Flash</item>
        <item>Forced Flash</item>
        <item>Slow Synchro</item>
        <item>Rear Synchro</item>
        <item>Wireless</item>
    </string-array>
    <string-array name="pref_flash_mode_values">
        <item>off</item>
        <item>auto</item>
        <item>on</item>
        <item>slowSync</item>
        <item>rearSync</item>
        <item>wireless</item>
    </string-array>





    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

</resources>
