<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="uk.co.lost_boyproductions.sonyrx100m3remotecontrol.FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/zoomW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lensZoomW" />

            <SeekBar
                android:id="@+id/lensZoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.64"
                android:progress="50" />

            <TextView
                android:id="@+id/zoomT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lensZoomT" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
